[package]
name = "capture-card-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl2 = "0.38.0"
anyhow = "1.0.100"
cpal = "0.16.0"
eframe = "0.33.0"
egui = "0.33.0"
nokhwa = { version = "0.10.9", features = ["input-native"] }
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Media"] }

[target.'cfg(target_os = "linux")'.dependencies]
